<resources>
    <string name="app_name">level4-task2</string>
    <string name="action_settings">Settings</string>
    <string name="action_history">History</string>
    <string name="action_delete_all">Delete entire history</string>
    <string name="welcome">Welcome</string>
    <string name="instructions">Instructions: select rock, paper or scissors to play.</string>
    <string name="statistics_title">Your all time statistics</string>
    <string name="statistics">Win: %d Draw: %d Lose: %d</string>
    <string name="win">You win!</string>
    <string name="lose">You lose.</string>
    <string name="computer">computer</string>
    <string name="you">you</string>
    <string name="vs">V.S.</string>
    <string name="historyWin">You won!</string>
    <string name="historyLose">Computer wins!</string>
    <string name="historyDraw">Draw</string>
</resources>